hphp/hack/test/typecheck/class_property_initialization/array_non_static.php.exp
File "array_non_static.php", line 8, characters 34-38:
Initialization of class property must be a static literal expression. (Typing[4152])
