hphp/hack/test/typecheck/class_property_initialization/array_non_static.php
<?hh // strict

function get(): int {
  return 1;
}

class Foo {
  public array<int> $vec = array(get(), 2);
}
